# ChangeLog for dev-ruby/cmdparse
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cmdparse/ChangeLog,v 1.18 2011/01/02 11:30:19 phajdan.jr Exp $

  02 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  cmdparse-2.0.2-r1.ebuild:
  x86 stable wrt bug #349883

  27 Dec 2010; Brent Baude <ranger@gentoo.org> cmdparse-2.0.2-r1.ebuild:
  stable ppc64, bug 349883

*cmdparse-2.0.2-r2 (27 Dec 2010)

  27 Dec 2010; Hans de Graaff <graaff@gentoo.org> cmdparse-2.0.2-r1.ebuild,
  +cmdparse-2.0.2-r2.ebuild:
  Bump revision to drop ruby19 from stable candidate.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  cmdparse-2.0.2.ebuild:
  Various cleanups.

*cmdparse-2.0.2-r1 (01 Feb 2010)

  01 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +cmdparse-2.0.2-r1.ebuild:
  Port to fakegem.

  18 Jun 2009; Hans de Graaff <graaff@gentoo.org> -cmdparse-2.0.0.ebuild,
  -cmdparse-2.0.1.ebuild:
  Remove old versions.

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> cmdparse-2.0.2.ebuild:
  ia64 stable wrt #271951

  31 May 2009; Markus Meier <maekke@gentoo.org> cmdparse-2.0.2.ebuild:
  x86 stable, bug #271951

  13 Oct 2007; Tom Gall <tgall@gentoo.org> cmdparse-2.0.2.ebuild:
  stable on ppc64

  17 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing citizen428 from metadata.xml (see #56803 for reference).

  06 Mar 2007; Tom Gall <tgall@gentoo.org> cmdparse-2.0.2.ebuild:
  added ~ppc64

*cmdparse-2.0.2 (07 Dec 2006)

  07 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +cmdparse-2.0.2.ebuild:
  Version bump. Ebuild provided by Jimmy.Jazz@gmx.net, #157366

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> cmdparse-2.0.0.ebuild:
  Mark 2.0.0 stable on ia64

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> cmdparse-2.0.0.ebuild:
  x86 stable

*cmdparse-2.0.1 (17 Apr 2006)

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> +cmdparse-2.0.1.ebuild:
  version bump
